# mistral-ocr-cli

./: README.md  mistral_ocr.py  pyproject.toml  requirements.txt
